--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "mongod": "^2.0.0",
     "mongodb": "^3.1.9",
+    "mssql": "^5.0.0-alpha.1",
     "mysql": "^2.16.0"
   }
 }
